<resources>
    <string name="app_name">Grocery List App</string>
    <string name="app_name_heading">Grocery List App</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="total_items">Total items: %1$d</string>
    <string name="enter_item">Please enter an item</string>
    <string name="item_icon">Item icon</string>
    <string name="delete">Delete</string>
    <string name="item_name">Item Name</string>
    <string name="total_items_0">Total items: 0</string>
    <string name="action">Action</string>
</resources>
